# PWiR

./: .dockerignore  .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
data/: db.sqlite3
src/: db.sqlite3
src/chat/: admin.py  models.py
src/chat/migrations/: 0001_initial.py
src/kernel/: settings.py
